--- a/RIFF.Web.Core/packages.config
+++ b/RIFF.Web.Core/packages.config
@@ -1,85 +1,90 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
-  <package id="Autofac" version="4.9.2" targetFramework="net462" />
-  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net462" />
-  <package id="Autofac.WebApi2" version="4.2.1" targetFramework="net462" />
-  <package id="codemirror.TypeScript.DefinitelyTyped" version="1.2.4" targetFramework="net46" />
-  <package id="DevExtreme.AspNet.Data" version="2.2.0" targetFramework="net462" />
-  <package id="devextreme.TypeScript.DefinitelyTyped" version="2.9.4" targetFramework="net46" />
-  <package id="jQuery" version="3.3.1" targetFramework="net462" />
-  <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net46" />
-  <package id="jQuery.Validation" version="1.17.0" targetFramework="net462" />
-  <package id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.2.8" targetFramework="net462" />
-  <package id="knockout.TypeScript.DefinitelyTyped" version="1.1.6" targetFramework="net462" />
-  <package id="knockoutjs" version="3.5.0" targetFramework="net462" />
-  <package id="log4net" version="2.0.8" targetFramework="net462" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net462" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net462" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net462" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net462" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net462" />
-  <package id="Microsoft.Net.Compilers" version="3.0.0" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
-  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="Modernizr" version="2.8.3" targetFramework="net46" />
-  <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net462" />
-  <package id="RazorEngine" version="3.10.0" targetFramework="net462" />
-  <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net462" />
-  <package id="Respond" version="1.4.2" targetFramework="net46" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
-  <package id="System.ComponentModel" version="4.3.0" targetFramework="net46" />
-  <package id="System.Console" version="4.3.1" targetFramework="net462" />
-  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net462" />
-  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net46" />
-  <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
-  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net46" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net46" />
-  <package id="System.ObjectModel" version="4.3.0" targetFramework="net46" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net46" />
-  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime" version="4.3.1" targetFramework="net462" />
-  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net462" />
-  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net46" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
-  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
-  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
-  <package id="WebActivatorEx" version="2.2.0" targetFramework="net46" />
-  <package id="WebGrease" version="1.6.0" targetFramework="net46" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
+  <package id="Autofac" version="5.2.0" targetFramework="net48" />
+  <package id="Autofac.Mvc5" version="5.0.0" targetFramework="net48" />
+  <package id="Autofac.WebApi2" version="5.0.0" targetFramework="net48" />
+  <package id="codemirror.TypeScript.DefinitelyTyped" version="1.2.4" targetFramework="net48" />
+  <package id="DevExtreme.AspNet.Data" version="2.6.2" targetFramework="net48" />
+  <package id="devextreme.TypeScript.DefinitelyTyped" version="2.9.4" targetFramework="net48" />
+  <package id="jQuery" version="3.3.1" targetFramework="net48" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net48" />
+  <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
+  <package id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.2.8" targetFramework="net48" />
+  <package id="knockout.TypeScript.DefinitelyTyped" version="1.1.6" targetFramework="net48" />
+  <package id="knockoutjs" version="3.5.0" targetFramework="net48" />
+  <package id="log4net" version="2.0.8" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
+  <package id="Microsoft.Net.Compilers" version="3.6.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="3.1.1" targetFramework="net48" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="RazorEngine" version="3.10.0" targetFramework="net48" />
+  <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net48" />
+  <package id="Respond" version="1.4.2" targetFramework="net48" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net48" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="net48" />
+  <package id="System.Console" version="4.3.1" targetFramework="net48" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net48" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net48" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="net48" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net48" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net48" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
